# WBA

./: .gitignore
PreReqQ3/airdrop/: airdrop.ts  enroll.ts  keygen.ts  package.json  transfer.ts
PreReqQ3/airdrop/programs/: wba_prereq.ts
RustPreReq03/: Cargo.toml
RustPreReq03/src/: lib.rs
